not broken. Attributes. setAttribute action. Fixed end-to-end test failing cuz of new shot equals enemies code change.

--- a/yaml/enemies.yaml
+++ b/yaml/enemies.yaml
@@ -3,6 +3,7 @@ enemy:
   hp: 9999
   diameter: 5
   actions: []
+    # - points: 0
 ---
 x-aimerLeft: &aimerLeft { spawn: nonShootingAimer, x: 128.5, y: -22 }
 x-aimerRight: &aimerRight { spawn: nonShootingAimer, x: 228.5, y: -22 }
@@ -81,8 +82,7 @@ x-rotateRight: &rotateRight
 
 x-shootWhileRotation: &shootWhileRotation
   - wait: 16
-  # - type: shoot_toward_player
-  - *shootTowardsPlayer
+  - type: shoot_toward_player
 
 x-rotateLeftAndShoot: &rotateLeftAndShoot
   parallellAll: [*rotateLeft, *shootWhileRotation]
