--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -18,6 +18,7 @@ tasks:
     sources: [src/**/*.ts]
     generates: [dist/**/*.js]
     method: timestamp
+    # defer: [echo "--------------------"]
 
   lint-build-watch: task lint-build-watcher -w
 
