--- a/yaml/common.yaml
+++ b/yaml/common.yaml
@@ -23,15 +23,14 @@ x-rows:
   - &r8 192
   - &r9 216
   - &r10 240
-
-x-shootTowardsPlayer: &shootTowardsPlayer
-  spawn: shot
-  x: 0
-  y: 0
-  actions:
-    - setSpeed: 2
-    - type: rotate_towards_player
-    - repeat: 999
-      actions:
-        - type: move_according_to_speed_and_direction
-        - type: waitNextFrame
+# x-shootTowardsPlayer: &shootTowardsPlayer
+#   spawn: shot
+#   x: 0
+#   y: 0
+#   actions:
+#     - setSpeed: 2
+#     - type: rotate_towards_player
+#     - repeat: 999
+#       actions:
+#         - type: move_according_to_speed_and_direction
+#         - type: waitNextFrame
