not broken. short form parallellRace.

--- a/yaml/enemies.yaml
+++ b/yaml/enemies.yaml
@@ -164,8 +164,7 @@ enemy:
   hp: 120
   diameter: 35
   actions:
-  - type: parallellRace
-    actionsLists:
+  - parallellRace:
     - *shootingPattern
     - *movementPattern
 ---
