--- a/yaml/enemies.yaml
+++ b/yaml/enemies.yaml
@@ -57,8 +57,7 @@ enemy:
           actions:
             - type: rotate_towards_player
             - wait: 8
-      - - repeat: 600
-          actions:
+      - - forever:
             - type: move_according_to_speed_and_direction
             - type: waitNextFrame
 ---
@@ -108,8 +107,7 @@ x-shootDown: &shootDown { type: shootDirection, x: 0, y: 1}
 
 x-shootingPattern: &shootingPattern
   - wait: 75
-  - repeat: 9999
-    actions:
+  - forever:
     - setShotSpeed: 2.6
     - { repeat: 3, actions: [*shootDown, wait: 3] }
     - wait: 55
@@ -197,7 +195,6 @@ enemy:
     - parallellAll:
       - - *left1
       - - wait: 60
-        - repeat: 99
-          actions:
+        - forever:
             - { type: shootDirection, x: 0, y: 1}
             - wait: 40
