--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "scripts": {
     "start": "run-s lint:eslint clean build add-extensions serve",
-    "s": "yarn start",
+    "s": "task -p -w serve eslint build",
     "lint:eslint": "eslint --fix src",
     "lint:ts": "tsc --noEmit",
     "clean": "trash dist/*",
@@ -25,6 +25,7 @@
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
     "babel-plugin-add-import-extension": "^1.6.0",
+    "chokidar": "^3.5.3",
     "cpy-cli": "^4.1.0",
     "eslint": "^8.16.0",
     "eslint-import-resolver-typescript": "^2.7.1",
@@ -34,6 +35,7 @@
     "serve": "^13.0.2",
     "trash-cli": "^5.0.0",
     "ts-jest": "^28.0.4",
+    "ts-node": "^10.8.1",
     "typescript": "^4.7.2"
   },
   "dependencies": {
