--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@babel/cli": "^7.17.10",
     "@babel/core": "^7.18.2",
     "@types/jest": "^28.1.0",
+    "@types/lodash-es": "^4.17.6",
+    "@types/node": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
     "babel-plugin-add-import-extension": "^1.6.0",
@@ -31,6 +33,7 @@
     "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.26.0",
     "jest": "^28.1.0",
+    "lodash-es": "^4.17.21",
     "npm-run-all": "^4.1.5",
     "serve": "^13.0.2",
     "trash-cli": "^5.0.0",
