--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,6 +37,13 @@
     // }
   },
   "ts-node": {
+    "compilerOptions": {
+      "target": "ESNext",
+      "module": "Node16",
+      "rootDir": "./",
+      "moduleResolution": "Node16",
+      "noImplicitAny": false,
+    },
     "esm": true
   }
 }
