--- a/package.json
+++ b/package.json
@@ -1,45 +1,27 @@
 {
   "name": "truxinator",
-  "version": "1.0.0",
+  "private": true,
   "type": "module",
-  "description": "",
+  "version": "0.0.0",
   "scripts": {
-    "start": "run-s lint:eslint clean build add-extensions serve",
-    "s": "task -p -w serve eslint build",
-    "lint:eslint": "eslint --fix src",
-    "lint:ts": "tsc --noEmit",
-    "clean": "trash dist/*",
-    "build": "tsc",
-    "add-extensions": "babel dist -d dist",
-    "serve": "serve"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
-  "script comments": {
-    "add-extensions": "add-extensions is needed because typescript does not add .js in the imports!!!!"
-  },
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
-    "@babel/cli": "^7.17.10",
-    "@babel/core": "^7.18.2",
     "@types/jest": "^28.1.0",
     "@types/lodash-es": "^4.17.6",
-    "@types/node": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
-    "babel-plugin-add-import-extension": "^1.6.0",
-    "chokidar": "^3.5.3",
-    "cpy-cli": "^4.1.0",
     "eslint": "^8.16.0",
     "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.26.0",
     "jest": "^28.1.0",
     "lodash-es": "^4.17.21",
-    "npm-run-all": "^4.1.5",
-    "serve": "^13.0.2",
-    "trash-cli": "^5.0.0",
     "ts-jest": "^28.0.4",
-    "ts-node": "^10.8.1",
-    "typescript": "^4.7.2"
+    "typescript": "^4.5.4",
+    "vite": "^2.9.12",
+    "vite-node": "^0.16.0"
   },
   "dependencies": {
     "yaml": "^2.1.1"
