--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,5 +27,6 @@
     "rgba(0,0,0,0)",
     "rgba(0,0,255,0.12)",
   ],
-  "jest.showTerminalOnLaunch": false
+  "jest.showTerminalOnLaunch": false,
+  "yaml.format.enable": false
 }
