not broken. split stages into separate yaml files.

--- a/yaml/stage1.yaml
+++ b/yaml/stage1.yaml
@@ -1,3 +1,35 @@
+x-aimerLeft: &aimerLeft { spawn: nonShootingAimer, x: 128.5, y: -22 }
+x-aimerRight: &aimerRight { spawn: nonShootingAimer, x: 228.5, y: -22 }
+
+x-sinusLeft: &sinusLeft { spawn: sinus, x: 75, y: -20 }
+x-sinusRight: &sinusRight { spawn: sinus, flags: [right], x: 280, y: -20 }
+
+x-leftMiniBoss: &leftMiniBoss { spawn: firstMiniboss, x: 118.881, y: -20 }
+x-rightMiniBoss: &rightMiniBoss { spawn: firstMiniboss, flags: [right], x: 237.762, y: -20 }
+
+x:
+  - &aimers
+      repeat: 8
+      actions: [*aimerLeft, *aimerRight, wait: 40]
+
+  - &sinuses
+      repeat: 5
+      actions:
+        - do: [*sinusLeft, wait: 70]
+        - do: [*sinusRight, wait: 70]
+
+enemy:
+    name: stage1
+    diameter: 20
+    hp: 9999
+    actions:
+      - wait: 120
+      - *aimers
+      - wait: 120
+      - *sinuses
+      - wait: 200
+      - do: [*leftMiniBoss, *rightMiniBoss]
+---
 enemy:
   name: nonShootingAimer
   hp: 4
