--- a/yaml/stage1.yaml
+++ b/yaml/stage1.yaml
@@ -79,7 +79,7 @@ enemy:
   diameter: 24
   actions:
   - setShotSpeed: 2
-  - { flag: right, yes: [{ type: mirrorX, value: true }] }
+  - { attr: right, yes: [{ type: mirrorX, value: true }] }
   - twice:
     - *rotateLeftAndShoot
     - *moveRight
@@ -118,7 +118,7 @@ x:
 - &downOutOfScreen      { moveToAbsolute: { x: 98.5, y: 290 }, frames: 210 }
 
 x-movementPattern: &movementPattern
-  - { flag: right, yes: [{ type: mirrorX, value: true }] }
+  - { attr: right, yes: [{ type: mirrorX, value: true }] }
   - *intoScreen
   - *down1
   - seq:
@@ -131,11 +131,11 @@ x-movementPattern: &movementPattern
       - [*down2, wait: 25,]
       - [*up2, wait: 25,]
       - [*downIn, wait: 25]
-  - { flag: right, yes: [{ type: mirrorY, value: true }] }
+  - { attr: right, yes: [{ type: mirrorY, value: true }] }
   - *rotateClockwise
   - wait: 25
   - *rotateAntiClockwise
-  - { flag: right, yes: [{ type: mirrorY, value: false }] }
+  - { attr: right, yes: [{ type: mirrorY, value: false }] }
   - wait: 25
   - *downOutOfScreen
 
