not broken. added fork action, use it in 2 places.

--- a/yaml/shot.yaml
+++ b/yaml/shot.yaml
@@ -2,6 +2,6 @@ enemy:
   name: shot
   hp: 9999
   diameter: 5
-  actions: []
-    # - points: 0
-    # - { type: gfxSetShape, shape: circle }
+  actions: 
+    - { type: setAttribute, attribute: points, value: 0 }
+    - { type: gfxSetShape, shape: circle }
