--- a/yaml/stage2.yaml
+++ b/yaml/stage2.yaml
@@ -35,8 +35,8 @@ enemy:
   hp: 10
   diameter: 18
   actions:
-    - { attr: mirrorX, yes: [{ type: mirrorX, value: true }] }
-    - { attr: mirrorY, yes: [{ type: mirrorY, value: true }] }
+    - { attr: mirrorX, is: true, yes: [{ type: mirrorX, value: true }] }
+    - { attr: mirrorY, is: true, yes: [{ type: mirrorY, value: true }] }
     - { setShotSpeed: 1.5 }
     - parallellAll:
       - - *left1
