not broken. added collisionType attribute. Enemy executes first frame immediately upon spawning (otherwise first action would be one frame delayed).

--- a/yaml/player.yaml
+++ b/yaml/player.yaml
@@ -10,6 +10,7 @@ enemy:
       # which is contra-intuitive. Should prolly not be set
       # automaticallt on tick, but need to be set explicitly.
       - { type: setMoveDirection, degrees: 0 }
+      - { type: "setAttribute", attribute: kills, value: nothing }
       - fork:
         - forever:
           - { type: moveAccordingToInput }
