--- a/yaml/shot.yaml
+++ b/yaml/shot.yaml
@@ -3,5 +3,6 @@ enemy:
   hp: 9999
   diameter: 5
   actions: 
+    - { type: "setAttribute", attribute: collisionType, value: enemyBullet }
     - { type: setAttribute, attribute: points, value: 0 }
     - { type: gfxSetShape, shape: circle }
