--- a/yaml/player.yaml
+++ b/yaml/player.yaml
@@ -3,7 +3,8 @@ enemy:
   hp: 9999
   diameter: 5
   actions:
-    - { type: "setAttribute", attribute: collisionType, value: playerBullet }
+    - { type: setAttribute, attribute: collisionType, value: playerBullet }
+    # TODO: is points really necessary for this?
     - { type: setAttribute, attribute: points, value: 0 }
     - { type: gfxSetShape, shape: circle }
     - { type: gfxSetColor, color: aqua }
@@ -15,24 +16,24 @@ x-shoot: &shoot
     actions:
       - fork:
         - forever:
-          - { type: "moveDelta", x: 0, y: -9 }
-          - { type: "waitNextFrame" }
+          - { type: moveDelta, x: 0, y: -9 }
+          - { type: waitNextFrame }
   - spawn: playerShot
     x: 0
     y: 0
     actions:
       - fork:
         - forever:
-          - { type: "moveDelta", x: 1.5, y: -9 }
-          - { type: "waitNextFrame" }
+          - { type: moveDelta, x: 1.5, y: -9 }
+          - { type: waitNextFrame }
   - spawn: playerShot
     x: 0
     y: 0
     actions:
       - fork:
         - forever:
-          - { type: "moveDelta", x: -1.5, y: -9 }
-          - { type: "waitNextFrame" }
+          - { type: moveDelta, x: -1.5, y: -9 }
+          - { type: waitNextFrame }
 
 enemy:
     name: player
@@ -46,7 +47,8 @@ enemy:
       # which is contra-intuitive. Should prolly not be set
       # automaticallt on tick, but need to be set explicitly.
       - { type: setMoveDirection, degrees: 0 }
-      - { type: "setAttribute", attribute: collisionType, value: player }
+      - { type: setAttribute, attribute: collisionType, value: player }
+      - { type: setAttribute, attribute: boundToWindow, value: true }
       - fork:
         - forever:
           - { type: moveAccordingToInput }
