--- a/yaml/spawner.yaml
+++ b/yaml/spawner.yaml
@@ -4,7 +4,7 @@ enemy:
     hp: 9999
     actions:
       - { spawn: player, x: 178.5, y: 220 }
-      - { spawn: stage1, x: 0, y: 0 }
-      # - { spawn: stage2, x: 0, y: 0 }
-      # - { spawn: stage3, x: 0, y: 0 }
-      # - { spawn: stage4, x: 0, y: 0 }
+      - { spawn: stage1 }
+      # - { spawn: stage2 }
+      # - { spawn: stage3 }
+      # - { spawn: stage4 }
