--- a/yaml/spawner.yaml
+++ b/yaml/spawner.yaml
@@ -3,6 +3,8 @@ enemy:
     diameter: 20
     hp: 9999
     actions:
+      - { type: setAttribute, attribute: collisionType, value: none }
+      - { type: gfxSetShape, shape: none }
       - { spawn: player, x: 178.5, y: 220 }
       - { spawn: stage1 }
       # - { spawn: stage2 }
