--- a/yaml/stage1.yaml
+++ b/yaml/stage1.yaml
@@ -31,6 +31,8 @@ enemy:
     diameter: 20
     hp: 9999
     actions:
+      - { type: setAttribute, attribute: collisionType, value: none }
+      - { type: gfxSetShape, shape: none }
       - wait: 120
       - *aimers
       - wait: 120
