--- a/yaml/player/player.yaml
+++ b/yaml/player/player.yaml
@@ -17,6 +17,16 @@ x-trippleShot: &trippleShot
         - forever:
           - { type: moveDelta, x: -1.5, y: -9 }
           - { type: waitNextFrame }
+  - wait: 8
+
+x-laser: &laser
+  - { spawn: playerLaser, y: 15 }
+  - { spawn: playerLaser, y: 10 }
+  - { spawn: playerLaser, y: 5 }
+  - { spawn: playerLaser, y: 0 }
+  - { spawn: playerLaser, y: -5 }
+  - { spawn: playerLaser, y: -10 }
+  - wait: 3
 
 enemy:
     name: player
@@ -39,5 +49,5 @@ enemy:
       - fork:
         - forever:
           - { type: waitInputShoot }
+          # - do: *laser
           - do: *trippleShot
-          - wait: 8
