--- a/yaml/player/playerShot.yaml
+++ b/yaml/player/playerShot.yaml
@@ -5,6 +5,7 @@ enemy:
   actions:
     - { type: setAttribute, attribute: collisionType, value: playerBullet }
     # TODO: is points really necessary for this?
+    - { type: setAttribute, attribute: pointsOnDeath, value: -1 }
     - { type: setAttribute, attribute: points, value: 0 }
     - { type: gfxSetShape, shape: circle }
     - { type: gfxSetColor, color: aqua }
