still not fixed tests. can now shoot laser with left Ctrl and trippleShot with Space.

--- a/yaml/player/player.yaml
+++ b/yaml/player/player.yaml
@@ -49,5 +49,8 @@ enemy:
       - fork:
         - forever:
           - { type: waitInputShoot }
-          # - do: *laser
           - do: *trippleShot
+      - fork:
+        - forever:
+          - { type: waitInputLaser }
+          - do: *laser
