not broken. made ui for a Settings menu.

--- a/yaml/spawner.yaml
+++ b/yaml/spawner.yaml
@@ -5,6 +5,7 @@ enemy:
     actions:
       - { type: setAttribute, attribute: collisionType, value: none }
       - { type: gfxSetShape, shape: none }
+      # - wait: 1
       - { spawn: player, x: 178.5, y: 220 }
       - { spawn: stage1 }
       # - { spawn: stage2 }
