--- a/package.json
+++ b/package.json
@@ -2,26 +2,26 @@
   "name": "schmupinator",
   "private": true,
   "type": "module",
-  "version": "0.0.0",
+  "version": "0.5.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 3000",
     "build": "tsc && vite build",
     "preview": "vite preview --port 3000",
     "zip": "cd yaml/ && bestzip ../public/game.zip *"
   },
   "devDependencies": {
-    "@types/jest": "^28.1.0",
-    "@typescript-eslint/eslint-plugin": "^5.26.0",
-    "@typescript-eslint/parser": "^5.26.0",
+    "@types/jest": "^28.1.6",
+    "@typescript-eslint/eslint-plugin": "^5.31.0",
+    "@typescript-eslint/parser": "^5.31.0",
     "bestzip": "^2.2.1",
-    "eslint": "^8.16.0",
-    "eslint-import-resolver-typescript": "^2.7.1",
+    "eslint": "^8.20.0",
+    "eslint-import-resolver-typescript": "^3.3.0",
     "eslint-plugin-import": "^2.26.0",
-    "jest": "^28.1.0",
-    "ts-jest": "^28.0.4",
-    "typescript": "^4.5.4",
-    "vite": "^2.9.12",
-    "vite-node": "^0.16.0"
+    "jest": "^28.1.3",
+    "ts-jest": "^28.0.7",
+    "typescript": "^4.7.4",
+    "vite": "^3.0.4",
+    "vite-node": "^0.19.1"
   },
   "dependencies": {
     "jszip": "^3.10.0",
