--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-import-resolver-typescript": "^3.3.0",
     "eslint-plugin-import": "^2.26.0",
     "jest": "^28.1.3",
+    "terser": "^5.14.2",
     "ts-jest": "^28.0.7",
     "typescript": "^4.7.4",
     "vite": "^3.0.4",
