--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "dev": "vite --port 3000",
     "build": "tsc && vite build",
+    "release": "tsc && vite build --base=/schmupinator/",
     "preview": "vite preview --port 3000",
-    "zip": "cd yaml/ && bestzip ../public/game.zip *"
+    "zip": "cd yaml/ && bestzip ../src/assets/game.zip *"
   },
   "devDependencies": {
     "@types/jest": "^28.1.6",
