not broken. logo anim in readme

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,5 +26,8 @@
   ],
   "jest.showTerminalOnLaunch": false,
   "yaml.format.enable": false,
-  "html.format.enable": false
+  "html.format.enable": false,
+  "[markdown]": {
+    "editor.formatOnSave": false,
+  }
 }
