--- a/yaml/player/player.yaml
+++ b/yaml/player/player.yaml
@@ -42,7 +42,7 @@ enemy:
       - { type: setMoveDirection, degrees: 0 }
       - { type: setAttribute, attribute: collisionType, value: player }
       - { type: setAttribute, attribute: boundToWindow, value: true }
-      # The following line are just a hack to hide the player initially.
+      # The following line is just a hack to hide the player initially.
       - do: [{ type: gfxSetShape, shape: none}, wait: 1, { type: gfxSetShape, shape: diamondShield}]
       - fork:
         - forever:
