--- a/yaml/stage1.yaml
+++ b/yaml/stage1.yaml
@@ -44,7 +44,7 @@ enemy:
   name: nonShootingAimer
   hp: 4
   diameter: 22
-  onDeathAction: { spawn: explosion }
+  onDeathAction: { spawn: roundExplosion }
   actions: 
     - setSpeed: 1.60
     - parallelAll:
@@ -88,7 +88,7 @@ enemy:
   name: sinus
   hp: 3
   diameter: 24
-  onDeathAction: { spawn: explosion }
+  onDeathAction: { spawn: roundExplosion }
   actions:
   - setShotSpeed: 2
   - { attr: right, is: true, yes: [{ type: mirrorX, value: true }] }
