--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "release": "tsc && vite build --base=/schmupinator/",
     "preview": "vite preview --port 3000",
-    "zip": "cd gameData/ && bestzip ../src/assets/game.zip *"
+    "zip": "cd gameData/game1 && bestzip ../../src/assets/game1.zip * && cd ../game2 && bestzip ../../src/assets/game2.zip *"
   },
   "devDependencies": {
     "@types/jest": "^28.1.6",
