not broken. played around with exploding enemies in game2.

--- a/gameData/game1/spawner.yaml
+++ b/gameData/game1/spawner.yaml
@@ -8,3 +8,6 @@ enemy:
       # - wait: 1
       - { spawn: player, x: 178.5, y: 220 }
       - { spawn: stage1 }
+      # - { spawn: stage2 }
+      # - { spawn: stage3 }
+      # - { spawn: stage4 }
