--- a/gameData/game2/spawner.yaml
+++ b/gameData/game2/spawner.yaml
@@ -7,7 +7,4 @@ enemy:
       - { type: gfxSetShape, shape: none }
       # - wait: 1
       - { spawn: player, x: 178.5, y: 220 }
-      - { spawn: stage1 }
-      # - { spawn: stage2 }
-      # - { spawn: stage3 }
-      # - { spawn: stage4 }
+      - { spawn: pacifistStage }
