--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,5 +29,8 @@
   "html.format.enable": false,
   "[markdown]": {
     "editor.formatOnSave": false,
-  }
+  },
+  "editor.rulers": [
+    100
+  ]
 }
