--- a/gameData/game2/kamikaze/kamikazeCorpse.yaml
+++ b/gameData/game2/kamikaze/kamikazeCorpse.yaml
@@ -28,4 +28,5 @@ enemy:
     - { type: shootDirection, x: -1, y: 0 }
     - { type: shootDirection, x: -1, y: -1 }
     - { type: shootDirection, x: 0, y: -1 }
+    - type: despawn
 
