--- a/gameData/game2/spawner.yaml
+++ b/gameData/game2/spawner.yaml
@@ -3,6 +3,9 @@ enemy:
     diameter: 20
     hp: 9999
     actions:
+      - fork:
+        - wait: 100
+        - type: finishLevel
       - { type: setAttribute, attribute: collisionType, value: none }
       - { type: gfxSetShape, shape: none }
       # - wait: 1
