--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,5 +32,8 @@
   },
   "editor.rulers": [
     100
-  ]
+  ],
+  "[typescript]": {
+    "editor.defaultFormatter": "dbaeumer.vscode-eslint"
+  },
 }
