--- a/package.json
+++ b/package.json
@@ -8,25 +8,20 @@
     "build": "tsc && vite build",
     "release": "tsc && vite build --base=/schmupinator/",
     "preview": "vite preview --port 3000",
-    "zip": "cd gameData/game1 && bestzip ../../src/assets/game1.zip * && cd ../game2 && bestzip ../../src/assets/game2.zip *"
+    "test": "jest"
   },
   "devDependencies": {
-    "@types/jest": "^28.1.6",
-    "@typescript-eslint/eslint-plugin": "^5.31.0",
-    "@typescript-eslint/parser": "^5.31.0",
-    "bestzip": "^2.2.1",
-    "eslint": "^8.20.0",
-    "eslint-import-resolver-typescript": "^3.3.0",
-    "eslint-plugin-import": "^2.26.0",
-    "jest": "^28.1.3",
-    "terser": "^5.14.2",
-    "ts-jest": "^28.0.7",
-    "typescript": "^4.7.4",
-    "vite": "^4.3.8",
-    "vite-node": "^0.31.1"
-  },
-  "dependencies": {
-    "jszip": "^3.10.0",
-    "yaml": "^2.1.1"
+    "@types/jest": "^29.5.2",
+    "@typescript-eslint/eslint-plugin": "^5.60.0",
+    "@typescript-eslint/parser": "^5.60.0",
+    "eslint": "^8.43.0",
+    "eslint-import-resolver-typescript": "^3.5.5",
+    "eslint-plugin-import": "^2.27.5",
+    "jest": "^29.5.0",
+    "terser": "^5.18.1",
+    "ts-jest": "^29.1.0",
+    "typescript": "5.0.4",
+    "vite": "^4.3.9",
+    "vite-node": "^0.32.2"
   }
 }
