--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jest": "^29.5.0",
     "terser": "^5.18.1",
     "ts-jest": "^29.1.0",
+    "type-fest": "^3.12.0",
     "typescript": "5.0.4",
     "vite": "^4.3.9",
     "vite-node": "^0.32.2"
