--- a/package.json
+++ b/package.json
@@ -8,21 +8,19 @@
     "build": "tsc && vite build",
     "release": "tsc && vite build --base=/schmupinator/",
     "preview": "vite preview --port 3000",
-    "test": "jest"
+    "test": "vitest run"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.2",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
     "@typescript-eslint/parser": "^5.60.0",
     "eslint": "^8.43.0",
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.27.5",
-    "jest": "^29.5.0",
     "terser": "^5.18.1",
-    "ts-jest": "^29.1.0",
     "type-fest": "^3.12.0",
     "typescript": "5.0.4",
     "vite": "^4.3.9",
-    "vite-node": "^0.32.2"
+    "vite-node": "^0.32.2",
+    "vitest": "^0.32.2"
   }
 }
