Removed Parallax service, parallax bgs are now GameObjects. had to add new actions for this to be supported.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
     "incremental": true, // disable this if you have problems. known to cause problems.
     "paths": {
       "@/*": [
-        "./*"
+        "./src/*"
       ],
     },
   },
