--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite --port 3000 --open",
     "build": "vite build",
-    "build:release": "vite build --base=/schmupinator/ --outDir dist/schmupinator",
+    "build:release": "vite build --mode release --base=/schmupinator/ --outDir dist/schmupinator",
     "preview": "vite preview --port 3000 --open",
     "preview:release": "vite preview --port 3000 --open schmupinator",
     "test": "vitest run"
