tighten eslint a bit

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,13 @@
     "target": "ESNext",
     "useDefineForClassFields": true,
     "module": "ESNext",
+    "verbatimModuleSyntax": true,
     "lib": [
       "ESNext",
       "DOM"
     ],
-    "moduleResolution": "Node",
+    "moduleResolution": "node10",
+    // "moduleResolution": "bundler", // sems to be recommended by Vite.
     "strict": true,
     "sourceMap": true,
     "resolveJsonModule": true,
