--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Node.js CI
+name: E2E
 
 on:
   push:
@@ -28,4 +28,3 @@ jobs:
         cache: 'npm'
     - run: npm install
     - run: npx vite-node ./src/main.ts
-    - run: npx eslint src
