--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.28.0",
+    "eslint-plugin-unicorn": "^48.0.1",
     "terser": "^5.19.2",
     "type-fest": "^4.1.0",
     "typescript": "5.1.6",
