--- a/deno.jsonc
+++ b/deno.jsonc
@@ -7,6 +7,6 @@
    // Might need to be set to true if I ever use npm modules run-time.
    "lock": false,
    "tasks": {
-      "e2e": "deno run --allow-hrtime ./src/main.ts"
+      "e2e": "deno run --allow-hrtime --no-remote ./src/main.ts"
    }
 }
