--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "vite": "^4.4.9",
     "vite-node": "^0.34.1",
     "vitest": "^0.34.1"
+  },
+  "dependencies": {
+    "comlink": "^4.4.1"
   }
 }
