--- a/deno.jsonc
+++ b/deno.jsonc
@@ -3,10 +3,10 @@
       "@/": "./src/"
    },
    // Might need to be set to true if I ever use npm modules run-time.
-   "nodeModulesDir": false,
+   // "nodeModulesDir": false,
    // Might need to be set to true if I ever use npm modules run-time.
    "lock": false,
    "tasks": {
-      "e2e": "deno run --allow-hrtime ./src/main.ts"
+      "e2e": "deno run --allow-hrtime --allow-read ./src/main.ts"
    }
 }
