--- a/package.json
+++ b/package.json
@@ -13,17 +13,17 @@
     "test": "vitest run"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^8.8.0",
-    "@typescript-eslint/parser": "^8.8.0",
-    "eslint": "^8.56.0",
-    "eslint-define-config": "^2.1.0",
-    "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-import-resolver-typescript": "^3.6.0",
+    "@eslint/js": "^9.0.0",
+    "@types/eslint__js": "^8.42.3",
+    "eslint": "^9.0.0",
+    "eslint-import-resolver-typescript": "^3.6.3",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-unicorn": "^48.0.1",
+    "globals": "^15.10.0",
     "terser": "^5.27.0",
     "type-fest": "^4.3.1",
     "typescript": "5.2.2",
+    "typescript-eslint": "^8.8.0",
     "vite": "^4.5.3",
     "vite-node": "^0.34.6",
     "vitest": "^0.34.3"
