--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "build:release": "vite build --mode release --base=/schmupinator/ --outDir dist/schmupinator",
     "preview": "vite preview --port 3000 --open",
-    "preview:release": "vite preview --port 3000 --open schmupinator",
+    "preview:release": "vite preview --port 3000 --open schmupinator/",
     "e2e:vite-node": "vite-node ./src/main.ts",
     "test": "vitest run"
   },
@@ -24,7 +24,7 @@
     "type-fest": "^4.3.1",
     "typescript": "5.2.2",
     "typescript-eslint": "^8.8.0",
-    "vite": "^4.5.3",
+    "vite": "^5.2.14",
     "vite-node": "^0.34.6",
     "vitest": "^0.34.3"
   }
