--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "vite": "^5.2.14",
     "vite-node": "^1.0.4",
     "vitest": "^1.0.4"
+  },
+  "optionalDependencies:comments": "needed only for one reason. lock file created and committed in windows makes pipelines explode in linux",
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.24.0"
   }
 }
