--- a/deno.jsonc
+++ b/deno.jsonc
@@ -3,10 +3,12 @@
       "@/": "./src/"
    },
    // Might need to be set to true if I ever use npm modules run-time.
-   "nodeModulesDir": false,
+   "nodeModulesDir": false, // pre-deno version 2
+   // "nodeModulesDir": "none", // since deno version 2
    // Might need to be set to true if I ever use npm modules run-time.
    "lock": false,
    "tasks": {
+      // Warning `allow-hrtime` and `deny-hrtime` have been removed in Deno 2, as high resolution time is now always allowed
       "e2e": "deno run --allow-hrtime --allow-read ./src/main.ts"
    }
 }
