--- a/deno.jsonc
+++ b/deno.jsonc
@@ -3,12 +3,11 @@
       "@/": "./src/"
    },
    // Might need to be set to true if I ever use npm modules run-time.
-   "nodeModulesDir": false, // pre-deno version 2
-   // "nodeModulesDir": "none", // since deno version 2
+   // "nodeModulesDir": "none",
    // Might need to be set to true if I ever use npm modules run-time.
-   "lock": false,
+   // "lock": false,
    "tasks": {
-      // Warning `allow-hrtime` and `deny-hrtime` have been removed in Deno 2, as high resolution time is now always allowed
-      "e2e": "deno run --allow-hrtime --allow-read ./src/main.ts"
+      "e2e": "deno run --allow-read ./src/main.ts",
+      "eslint": "deno run -A npm:eslint src"
    }
 }
